# OpenGLTutorial

./: LICENSE  README.md
CLionProject/: CMakeLists.txt  camera.h  display.cpp  display.h  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h  stb_image.c  texture.cpp  texture.h  transform.h
CLionProject/res/: basicShader.fs  basicShader.vs
